# Rextro-Chatbot

./: response.json
.github/workflows/: deploy.yml
rag/: .env.example  .gitignore  Dockerfile  README.md  github-actions  github-actions.pub  main.py  open-api-v1-spec.yaml  pyproject.toml  requirements.txt
rag/.choreo/: component.yaml
rag/config/: config.py
rag/data/md_files/: sample.md
rag/database/: db.py
rag/src/agent/: agent.py
rag/src/agent/tools/: get_data_from_md.py  get_rextro_latest_sessions.py  get_rextro_zones.py  get_similar_text_chunk.py  get_zones.py  search_rextro_sessions.py
rextro-ui/: index.html  package-lock.json  package.json
rextro-ui/src/: App.tsx
stress_testing/: README.md  main.py  pyproject.toml
stress_testing/locust_test/: load_test_results_20251008_093923.csv  load_test_results_20251008_112547.csv  load_test_results_20251008_113727.csv  locustfile.py
