[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "google-auth>=2.41.1",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "limits>=5.6.0",
    "llama-index[gemini]>=0.14.0",
    "llama-index-llms-gemini>=0.6.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.35.0",
    "youtube-transcript-api>=1.2.2",
]
